fix project homepage

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-dom": "0.14.x"
   },
   "author": "Gregory Potdevin",
-  "homepage": "http://www.appcraft.fr",
+  "homepage": "http://gregorypotdevin.github.io/react-hogan/",
   "license": "MIT",
   "repository": "",
   "keywords": [
