--- a/package.json
+++ b/package.json
@@ -20,22 +20,25 @@
   },
   "dependencies": {
     "hogan.js": "^3.0.2",
-    "react-addons-shallow-compare": "0.14.x"
+    "react-addons-shallow-compare": "0.15.x"
   },
   "peerDependencies": {
-    "react": "0.14.x"
+    "react": "0.15.x"
   },
   "devDependencies": {
     "gh-pages": "^0.11.0",
     "nwb": "0.9.x",
-    "react": "0.14.x",
-    "react-codemirror": "^0.2.6",
-    "react-dom": "0.14.x"
+    "react": "0.15.x",
+    "react-dom": "0.15.x",
+    "react-codemirror": "^0.2.6"
   },
   "author": "Gregory Potdevin",
   "homepage": "http://gregorypotdevin.github.io/react-hogan/",
   "license": "MIT",
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/GregoryPotdevin/react-hogan.git"
+  },
   "keywords": [
     "react-component"
   ]
